--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -49,6 +49,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    box-sizing: border-box;
 }
 
 .promo__more-button-text {
